--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <script>
-        function sendMessage() {
+        async function sendMessage() {
             const chatBox = document.getElementById('chat-box');
             const chatInput = document.getElementById('chat-input');
             const message = chatInput.value;
@@ -127,25 +127,26 @@
             chatBox.appendChild(userMessage);
             chatInput.value = '';
 
-            fetchScript(message);
+            await fetchScript(message);
         }
 
-        function fetchScript(topic) {
-            const url = `https://scriptblox.com/api/script?search=${encodeURIComponent(topic)}`;
+        async function fetchScript(topic) {
+            const url = `https://api.github.com/search/code?q=${encodeURIComponent(topic)}+in:file+language:lua`;
 
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
-                    if (data && data.scripts && data.scripts.length > 0) {
-                        const scriptContent = data.scripts[0].content; // Adjust based on actual API response
-                        displayScript(scriptContent);
-                    } else {
-                        displayError('Script not found.');
-                    }
-                })
-                .catch(() => {
-                    displayError('Failed to fetch the script.');
-                });
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+
+                if (data.items && data.items.length > 0) {
+                    const scriptUrl = data.items[0].html_url.replace('github.com', 'raw.githubusercontent.com').replace('/blob', '');
+                    const scriptContent = await fetch(scriptUrl).then(res => res.text());
+                    displayScript(scriptContent);
+                } else {
+                    displayError('Script not found.');
+                }
+            } catch (error) {
+                displayError('Failed to fetch the script.');
+            }
         }
 
         function displayScript(script) {
