--- a/index.html
+++ b/index.html
@@ -1,309 +1,3 @@
-Skip to content
-Navigation Menu
-Copilot
-
-Type / to search
-Copilot Chat
-Website with chat and script fetching functionality
-could you code me a Website with a chat on and when you assk for a script  the CHatbox fetch a script  with the topic that got asked for from  "https://scriptblox.com" 
-and send the fetched script inside of a panel with a copy output button inside of it  
-So people can use it
-Sure! Below is the code for a simple website that includes a chatbox where users can request scripts. The chatbox will fetch the scripts from "https://scriptblox.com" and display them in a panel with a copy button.
-
-First, let's create the HTML file for the website.
-
-
-index.html
-v16
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 2 repositories
-In this code:
-
-The HTML structure includes a chat container with a chat box, input box, and script panel.
-The chat box displays user messages and error messages.
-The script panel displays the fetched script and includes a copy button.
-The sendMessage function sends the user message and fetches the script.
-The fetchScript function fetches the script from the hypothetical API endpoint.
-The displayScript function displays the fetched script in the script panel.
-The displayError function displays error messages in the chat box.
-The copyToClipboard function copies the script content to the clipboard.
-Please note that the API endpoint https://scriptblox.com/api/getScript is a placeholder and should be replaced with the actual endpoint and parameters provided by scriptblox.com. Additionally, the response handling in the fetchScript function should be adjusted based on the actual API response format.
-
-make the website theme be by "21,21,21" 
-
-Asl ofix that its failing to fetch script  when a user for example ask for a Brookhaven script theen it should send a Script that got fetched from Scriptblox.com and send it to the script
-Below is the updated code with the dark theme and corrected script fetching functionality. I've also added some comments for clarity.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 1 repository
-Changes made:
-Theme Update: The background color and other UI elements have been updated to use the color #212121 for a dark theme.
-Script Fetching Fixed: The fetchScript function now correctly fetches scripts based on the search query from scriptblox.com. Replace https://scriptblox.com/api/script?search=${encodeURIComponent(topic)} with the actual API endpoint if it differs.
-Error Handling: Improved error handling to display errors in the chatbox.
-Make sure to adjust the API endpoint URL and response handling based on the actual API documentation provided by scriptblox.com.
-
-instead of fetching make it be like its fetching the sccript from any sided For example github. 
-So when the user ask for example for a Brookhaven scriot its looking for a brookhaven script on github and sends it to the chat so the user can use it
-Certainly! Below is the updated version of the HTML file with JavaScript functionality to fetch scripts from GitHub based on the user's query.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 2 repositories
-Changes made:
-Theme Update: The background color and other UI elements have been updated to use the color #212121 for a dark theme.
-Fetching Script from GitHub: The fetchScript function now fetches scripts from GitHub using the GitHub Search API.
-Error Handling: Improved error handling to display errors in the chatbox.
-Note:
-This example assumes that the scripts are in JavaScript and uses the GitHub API to search for code files.
-Replace https://api.github.com/search/code?q=${encodeURIComponent(topic)}+in:file+language:javascript with the appropriate endpoint and search parameters as needed.
-The script content is fetched from the first search result. You may want to improve the logic to select the most relevant script or handle the response differently based on your requirements.
-it should fetch script for roblox (lua)
-Got it! Below is the updated version of the HTML file with JavaScript functionality to fetch Roblox scripts (written in Lua) from GitHub based on the user's query.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 2 repositories
-Changes made:
-Theme Update: The background color and other UI elements have been updated to use the color #212121 for a dark theme.
-Fetching Script from GitHub: The fetchScript function now fetches Roblox scripts written in Lua from GitHub using the GitHub Search API.
-Fetching Raw Script Content: The script content is fetched from the raw URL by replacing github.com with raw.githubusercontent.com and removing /blob.
-Error Handling: Improved error handling to display errors in the chatbox.
-Note:
-This example uses the GitHub API to search for Lua scripts related to the user's query.
-The script content is fetched from the first search result. You may want to improve the logic to select the most relevant script or handle the response differently based on your requirements.
-i got a idea, 
-Just build in scripts to t he code... 
-1. fly (keyword = fly)
-2. Camera lock (Keyword = AIm lock,Aimbot,Camlock)
-3. Walkspeed changer (keyword = walkspeed) 
-4. Box ESp ( key word = box Esp)
-5. Name Esp (keyword = name)
-6. Hitbox Expander (keyword = hitbox) 
-7. Invisible (keyword = invisible)
-8. Teleport tool (keyword  = tp,teleport) 
-
-please code me all those scripts and build them iinside the code so if a user names the keyword its sending the script
-Sure, here is the updated HTML file with the built-in scripts. When a user types a keyword, the corresponding script will be displayed in the chat and can be copied.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 1 repository
-Built-in Scripts:
-Fly Script - fly
-Aim Lock Script - aim lock, aimbot, camlock
-Walkspeed Changer Script - walkspeed
-Box ESP Script - box esp
-Name ESP Script - name
-Hitbox Expander Script - hitbox
-Invisible Script - invisible
-Teleport Tool Script - tp, teleport
-How it Works:
-The scripts object contains all the built-in scripts with their corresponding keywords.
-The sendMessage function checks if the user's message matches any keyword.
-If a match is found, the corresponding script is displayed in the script panel.
-If no match is found, an error message is displayed.
-The copyToClipboard function allows users to copy the displayed script to the clipboard.
-thats very good but make it be like after user named a keyword in hes sentences and the script is sending make it be a Animation so the chatbot thats sending the script is like writing the script
-Sure! Below is the updated HTML file that includes an animation effect where the chatbot appears to be typing the script before displaying it.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 1 repository
-Changes made:
-Typing Animation: Added a displayTypingAnimation function to simulate the chatbot typing.
-Delay in Displaying Script: The script is displayed after a 2-second delay to simulate typing.
-Note:
-The displayTypingAnimation function creates a "Chatbot is typing..." message and removes it after a delay, then calls the provided callback function.
-The delay can be adjusted as needed by changing the 2000 milliseconds value in the setTimeout function.
-u forget the <html> "
-at the end of the whole code also make it be the type anumation be like its showing word for word till the script is done, but make it be a normal writing speed so its not to slow
-Sure! Below is the updated HTML file with the typing animation that displays the script word by word.
-
-
-index.html
-v30
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 1 repository
-also make it like the bot is saying "Suree heres your (scriptname) Script 
-then wait 0,5 seconds then start coding
-
-index.html
-v32
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
- Public code references from 1 repository
-Ask Copilot
-Content preview
-
-index.html
-Press Delete to close.
-373 lines · 11 KB
-
-index.html file contents
-  1
-  2
-  3
-  4
-  5
-  6
-  7
-  8
-  9
- 10
- 11
- 12
- 13
- 14
- 15
- 16
- 17
- 18
- 19
- 20
- 21
- 22
- 23
- 24
- 25
- 26
- 27
- 28
- 29
- 30
- 31
- 32
- 33
- 34
- 35
- 36
- 37
- 38
- 39
- 40
- 41
- 42
- 43
- 44
- 45
- 46
- 47
- 48
- 49
- 50
- 51
- 52
- 53
- 54
- 55
- 56
- 57
- 58
- 59
- 60
- 61
- 62
- 63
- 64
- 65
- 66
- 67
- 68
- 69
- 70
- 71
- 72
- 73
- 74
- 75
- 76
- 77
- 78
- 79
- 80
- 81
- 82
- 83
- 84
- 85
- 86
- 87
- 88
- 89
- 90
- 91
- 92
- 93
- 94
- 95
- 96
- 97
- 98
- 99
-100
-101
-102
-103
-104
-105
-106
-107
-108
-109
-110
-111
-112
-113
-114
-115
-116
-117
-118
-119
-120
-121
-122
 <!DOCTYPE html>
 <html lang="en">
 
@@ -426,4 +120,255 @@ index.html file contents
 -- Fly Script
 local player = game.Players.LocalPlayer
 local mouse = player:GetMouse()
-index.html <!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> Public code references from 1 repository
+local flying = false
+local speed = 50
+
+mouse.KeyDown:connect(function(key)
+    if key == "e" then
+        flying = not flying
+        if flying then
+            local bodyGyro = Instance.new("BodyGyro", player.Character.HumanoidRootPart)
+            local bodyVelocity = Instance.new("BodyVelocity", player.Character.HumanoidRootPart)
+            bodyGyro.P = 9e4
+            bodyGyro.MaxTorque = Vector3.new(9e9, 9e9, 9e9)
+            bodyGyro.CFrame = player.Character.HumanoidRootPart.CFrame
+            bodyVelocity.Velocity = Vector3.new(0, 0, 0)
+            bodyVelocity.MaxForce = Vector3.new(9e9, 9e9, 9e9)
+            while flying do
+                wait()
+                player.Character.Humanoid.PlatformStand = true
+                bodyVelocity.Velocity = (player.Character.HumanoidRootPart.CFrame.lookVector * speed)
+                bodyGyro.CFrame = CFrame.new(mouse.Hit.p)
+            end
+            player.Character.Humanoid.PlatformStand = false
+            bodyGyro:Destroy()
+            bodyVelocity:Destroy()
+        end
+    end
+end)
+`,
+            "aim lock": `
+-- Aim Lock Script
+local players = game:GetService("Players")
+local player = players.LocalPlayer
+local mouse = player:GetMouse()
+local target = null
+
+mouse.Button2Down:Connect(function() {
+    let closest = math.huge;
+    for (let i in players.GetPlayers()) {
+        const v = players.GetPlayers()[i];
+        if (v !== player && v.Character && v.Character.FindFirstChild("Head")) {
+            const distance = (v.Character.Head.Position - player.Character.Head.Position).magnitude;
+            if (distance < closest) {
+                closest = distance;
+                target = v;
+            }
+        }
+    }
+});
+
+mouse.Button2Up:Connect(function() {
+    target = null;
+});
+
+game.GetService("RunService").RenderStepped.Connect(function() {
+    if (target && target.Character && target.Character.FindFirstChild("Head")) {
+        mouse.Hit = target.Character.Head.CFrame;
+    }
+});
+`,
+            "walkspeed": `
+-- Walkspeed Changer Script
+local player = game.Players.LocalPlayer
+local character = player.Character or player.CharacterAdded:Wait()
+
+character.Humanoid.WalkSpeed = 100 -- Change the value to your desired speed
+`,
+            "box esp": `
+-- Box ESP Script
+local function createBox(target)
+    local box = Drawing.new("Square")
+    box.Visible = true
+    box.Color = Color3.fromRGB(255, 0, 0)
+    box.Thickness = 2
+    box.Transparency = 1
+    
+    local function updateBox()
+        if target and target.Character and target.Character:FindFirstChild("Head") then
+            local head = target.Character.Head
+            local headPos, onScreen = workspace.CurrentCamera:WorldToViewportPoint(head.Position)
+            if onScreen then
+                box.Size = Vector2.new(2000 / headPos.Z, 3000 / headPos.Z)
+                box.Position = Vector2.new(headPos.X - box.Size.X / 2, headPos.Y - box.Size.Y / 2)
+            else
+                box.Visible = false
+            end
+        else
+            box.Visible = false
+        end
+    end
+    
+    game:GetService("RunService").RenderStepped:Connect(updateBox)
+end
+
+for _, player in pairs(game.Players:GetPlayers()) do
+    if player ~= game.Players.LocalPlayer then
+        createBox(player)
+    end
+end
+
+game.Players.PlayerAdded:Connect(function(player)
+    createBox(player)
+end)
+`,
+            "name": `
+-- Name ESP Script
+local function createNameTag(target)
+    local bill = Instance.new("BillboardGui", target.Character.Head)
+    bill.Size = UDim2.new(1, 0, 1, 0)
+    bill.Adornee = target.Character.Head
+    bill.AlwaysOnTop = true
+
+    local nameTag = Instance.new("TextLabel", bill)
+    nameTag.Size = UDim2.new(1, 0, 1, 0)
+    nameTag.Text = target.Name
+    nameTag.BackgroundTransparency = 1
+    nameTag.TextColor3 = Color3.fromRGB(255, 0, 0)
+    nameTag.TextStrokeTransparency = 0
+end
+
+for _, player in pairs(game.Players:GetPlayers()) do
+    if player ~= game.Players.LocalPlayer then
+        createNameTag(player)
+    end
+end
+
+game.Players.PlayerAdded:Connect(function(player)
+    player.CharacterAdded:Connect(function()
+        createNameTag(player)
+    end)
+end)
+`,
+            "hitbox": `
+-- Hitbox Expander Script
+local player = game.Players.LocalPlayer
+local character = player.Character or player.CharacterAdded:Wait()
+
+for _, part in pairs(character:GetChildren()) do
+    if part:IsA("BasePart") then
+        part.Size = part.Size * 2
+        part.Transparency = 0.5
+    end
+end
+`,
+            "invisible": `
+-- Invisible Script
+local player = game.Players.LocalPlayer
+local character = player.Character or player.CharacterAdded:Wait()
+
+local humanoidRootPart = character:FindFirstChild("HumanoidRootPart")
+
+if humanoidRootPart then
+    humanoidRootPart.Transparency = 1
+    humanoidRootPart.CanCollide = false
+    for _, part in pairs(character:GetChildren()) do
+        if part:IsA("BasePart") and part ~= humanoidRootPart then
+            part.Transparency = 1
+            part.CanCollide = false
+        end
+    end
+end
+`,
+            "tp": `
+-- Teleport Tool Script
+local player = game.Players.LocalPlayer
+local mouse = player:GetMouse()
+
+mouse.Button1Down:Connect(function()
+    if mouse.Target then
+        player.Character:MoveTo(mouse.Hit.p)
+    end
+end)
+`
+        };
+
+        async function sendMessage() {
+            const chatBox = document.getElementById('chat-box');
+            const chatInput = document.getElementById('chat-input');
+            const message = chatInput.value.trim().toLowerCase();
+
+            if (message === '') return;
+
+            const userMessage = document.createElement('p');
+            userMessage.textContent = `You: ${message}`;
+            chatBox.appendChild(userMessage);
+            chatInput.value = '';
+
+            const scriptName = getScriptName(message);
+            if (scriptName) {
+                displayTypingAnimation(scriptName, scripts[scriptName]);
+            } else {
+                displayError('Script not found.');
+            }
+        }
+
+        function getScriptName(message) {
+            for (const key in scripts) {
+                if (message.includes(key)) {
+                    return key;
+                }
+            }
+            return null;
+        }
+
+        function displayTypingAnimation(scriptName, script) {
+            const chatBox = document.getElementById('chat-box');
+            const typingMessage = document.createElement('p');
+            typingMessage.textContent = `Sure, here's your ${scriptName} script...`;
+            chatBox.appendChild(typingMessage);
+
+            setTimeout(() => {
+                chatBox.removeChild(typingMessage);
+                typeScript(script);
+            }, 500);
+        }
+
+        function typeScript(script) {
+            const scriptContent = document.getElementById('script-content');
+            const scriptPanel = document.getElementById('script-panel');
+            scriptContent.textContent = '';
+            scriptPanel.style.display = 'block';
+
+            let index = 0;
+            const interval = setInterval(() => {
+                if (index < script.length) {
+                    scriptContent.textContent += script.charAt(index);
+                    index++;
+                } else {
+                    clearInterval(interval);
+                }
+            }, 50); // Adjust the speed as needed
+        }
+
+        function displayError(error) {
+            const chatBox = document.getElementById('chat-box');
+            const errorMessage = document.createElement('p');
+            errorMessage.textContent = `Error: ${error}`;
+            chatBox.appendChild(errorMessage);
+        }
+
+        function copyToClipboard() {
+            const scriptContent = document.getElementById('script-content');
+            const textArea = document.createElement('textarea');
+            textArea.value = scriptContent.textContent;
+            document.body.appendChild(textArea);
+            textArea.select();
+            document.execCommand('copy');
+            document.body.removeChild(textArea);
+            alert('Script copied to clipboard!');
+        }
+    </script>
+</body>
+
+</html>
