--- a/index.html
+++ b/index.html
@@ -19,27 +19,45 @@
         }
 
         .chat-container {
+            display: flex;
+            flex-direction: column;
             background-color: #212121;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 400px;
             max-width: 100%;
+            height: 90vh;
             padding: 20px;
             box-sizing: border-box;
         }
 
         .chat-box {
-            height: 300px;
+            flex: 1;
             overflow-y: auto;
             border: 1px solid #333;
             border-radius: 10px;
             padding: 10px;
             margin-bottom: 10px;
             background-color: #1a1a1a;
+            scrollbar-width: thin;
+            scrollbar-color: #212121 #1a1a1a;
         }
 
         .chat-box p {
             margin: 5px 0;
+        }
+
+        .chat-box::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .chat-box::-webkit-scrollbar-thumb {
+            background-color: #212121;
+            border-radius: 10px;
+        }
+
+        .chat-box::-webkit-scrollbar-track {
+            background-color: #1a1a1a;
         }
 
         .input-box {
@@ -107,10 +125,6 @@
         <div class="input-box">
             <input type="text" id="chat-input" placeholder="Ask for a script...">
             <button onclick="sendMessage()">Send</button>
-        </div>
-        <div class="script-panel" id="script-panel">
-            <pre id="script-content"></pre>
-            <button onclick="copyToClipboard()">Copy</button>
         </div>
     </div>
 
@@ -310,6 +324,9 @@ end)
             } else {
                 displayError('Script not found.');
             }
+
+            // Scroll to the bottom of the chat box
+            chatBox.scrollTop = chatBox.scrollHeight;
         }
 
         function getScriptName(message) {
@@ -334,10 +351,18 @@ end)
         }
 
         function typeScript(script) {
-            const scriptContent = document.getElementById('script-content');
-            const scriptPanel = document.getElementById('script-panel');
-            scriptContent.textContent = '';
-            scriptPanel.style.display = 'block';
+            const chatBox = document.getElementById('chat-box');
+            const scriptPanel = document.createElement('div');
+            scriptPanel.classList.add('script-panel');
+            chatBox.appendChild(scriptPanel);
+
+            const scriptContent = document.createElement('pre');
+            scriptPanel.appendChild(scriptContent);
+
+            const copyButton = document.createElement('button');
+            copyButton.textContent = 'Copy';
+            copyButton.onclick = () => copyToClipboard(scriptContent.textContent);
+            scriptPanel.appendChild(copyButton);
 
             let index = 0;
             const interval = setInterval(() => {
@@ -348,6 +373,9 @@ end)
                     clearInterval(interval);
                 }
             }, 25); // Typing speed adjusted to be 2 times faster
+
+            // Scroll to the bottom of the chat box
+            chatBox.scrollTop = chatBox.scrollHeight;
         }
 
         function displayError(error) {
@@ -357,10 +385,9 @@ end)
             chatBox.appendChild(errorMessage);
         }
 
-        function copyToClipboard() {
-            const scriptContent = document.getElementById('script-content');
+        function copyToClipboard(text) {
             const textArea = document.createElement('textarea');
-            textArea.value = scriptContent.textContent;
+            textArea.value = text;
             document.body.appendChild(textArea);
             textArea.select();
             document.execCommand('copy');
